feature: edit endpoint for all (materials, courses, users)
